--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
         #building_explorer{
             height: 290px;
             width: 490px;
-            border: 1px solid red;
+            /* border: 1px solid red; */
             background: url('ca_bg.png');
+        }
+        body{
+            background: url('site_bg.jpg');
         }
     </style>
 </head>
@@ -27,6 +30,15 @@
         {"sel":"#nav_btns button[data-loc-id=&#39;3&#39;]","transform":{"px":-162.7410441820699,"py":406.4990786919584,"pz":-1222.5003920282277,"qw":0.46212194815187657,"qx":-0.164856824708531,"qy":0.8206997482964161,"qz":0.292775435324643,"sx":1,"sy":1,"sz":1}},
         {"sel":"#nav_btns button[data-loc-id=&#39;4&#39;]","transform":{"px":-562.0099367634575,"py":667.7608928446195,"pz":-696.817906264705,"qw":-0.33855918126310236,"qx":0.13179499635288008,"qy":0.8682048338983448,"qz":0.33797651710488635,"sx":1,"sy":1,"sz":1}}
         ]'
+        data-materials='[
+        {"name":"roof_tile","color":"#a87f76"},
+        {"name":"glass_1","color":"#cdd4d7"},
+        {"name":"flat_stone_1","color":"#967f75"},
+        {"name":"wood_1","color":"#4f4847"},
+        {"name":"wood_2","color":"#776a6d"},
+        {"name":"black_roofing","color":"#7f7f90"},
+        {"name":"brick_1","color":"#9f968a"}
+        ]' 
     ></div>
     <div id='nav_btns'>
         <button data-loc-id='1' >1</button>
@@ -34,6 +46,8 @@
         <button data-loc-id='3' >3</button>
         <button data-loc-id='4' >4</button>
     </div>
+fallback #ff00fe
+
     <script src="../building_explorer.js"></script>
 </body>
 
