--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
         data-flymode=1
         data-inital-camera='{"px":-645.5485485764707,"py":399.3889581805984,"pz":248.12370463017805,"qw":0.9535074581851017,"qx":-0.15546096730788614,"qy":-0.2548125453282061,"qz":-0.04154493437765798,"sx":1,"sy":1,"sz":1}'
         data-camera-locations='[
-        {"sel":"#nav_btns button[data-loc-id=&#39;1&#39;]","transform":{"px":-645.5485485764707,"py":399.3889581805984,"pz":248.12370463017805,"qw":0.9535074581851017,"qx":-0.15546096730788614,"qy":-0.2548125453282061,"qz":-0.04154493437765798,"sx":1,"sy":1,"sz":1}},
+        {"sel":"#nav_btns button[data-loc-id=&#39;1&#39;]","transform":{"px":-417.79643549348583,"py":204.94616965666756,"pz":135.18250615349774,"qw":0.9133090292671361,"qx":-0.1800095049592983,"qy":-0.35843053747154413,"qz":-0.070645205012723,"sx":1,"sy":1,"sz":1},"room_name":"room_kitchen"},
         {"sel":"#nav_btns button[data-loc-id=&#39;2&#39;]","transform":{"px":446.9733137626457,"py":430.07020362728997,"pz":334.0383713843654,"qw":0.9402002043982667,"qx":-0.172098351886713,"qy":0.2891445012747164,"qz":0.05292627239783655,"sx":1,"sy":1,"sz":1}},
         {"sel":"#nav_btns button[data-loc-id=&#39;3&#39;]","transform":{"px":-162.7410441820699,"py":406.4990786919584,"pz":-1222.5003920282277,"qw":0.46212194815187657,"qx":-0.164856824708531,"qy":0.8206997482964161,"qz":0.292775435324643,"sx":1,"sy":1,"sz":1}},
-        {"sel":"#nav_btns button[data-loc-id=&#39;4&#39;]","transform":{"px":-562.0099367634575,"py":667.7608928446195,"pz":-696.817906264705,"qw":-0.33855918126310236,"qx":0.13179499635288008,"qy":0.8682048338983448,"qz":0.33797651710488635,"sx":1,"sy":1,"sz":1}}
+        {"sel":"#nav_btns button[data-loc-id=&#39;4&#39;]","transform":{"px":784.4190657548925,"py":700.7900152942406,"pz":-1253.6195610428158,"qw":0.4559311895718988,"qx":-0.049511369778837015,"qy":0.8834430086861709,"qz":0.09593656780239114,"sx":1,"sy":1,"sz":1}}
         ]'
         data-materials='[
         {"name":"roof_tile","color":"#a87f76"},
@@ -46,8 +46,6 @@
         <button data-loc-id='3' >3</button>
         <button data-loc-id='4' >4</button>
     </div>
-fallback #ff00fe
-
     <script src="../building_explorer.js"></script>
 </body>
 
