--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,13 @@
     <div 
         id='building_explorer'
         data-flymode=0
-        data-inital-camera='{"px":-645.5485485764707,"py":399.3889581805984,"pz":248.12370463017805,"qw":0.9535074581851017,"qx":-0.15546096730788614,"qy":-0.2548125453282061,"qz":-0.04154493437765798,"sx":1,"sy":1,"sz":1}'
+        data-inital-camera='{"px":101.66756030345846,"py":796.3331817749057,"pz":502.8718389121419,"qw":0.9464821493196116,"qx":-0.2974579738163804,"qy":0.11949840157679664,"qz":0.037555650080545636,"sx":1,"sy":1,"sz":1}'
         data-camera-locations='[
-        {"sel":"#nav_btns button[data-loc-id=&#39;1&#39;]","transform":{"px":-417.79643549348583,"py":204.94616965666756,"pz":135.18250615349774,"qw":0.9133090292671361,"qx":-0.1800095049592983,"qy":-0.35843053747154413,"qz":-0.070645205012723,"sx":1,"sy":1,"sz":1},"room_name":"room_kitchen"},
-        {"sel":"#nav_btns button[data-loc-id=&#39;2&#39;]","transform":{"px":446.9733137626457,"py":430.07020362728997,"pz":334.0383713843654,"qw":0.9402002043982667,"qx":-0.172098351886713,"qy":0.2891445012747164,"qz":0.05292627239783655,"sx":1,"sy":1,"sz":1}},
-        {"sel":"#nav_btns button[data-loc-id=&#39;3&#39;]","transform":{"px":-162.7410441820699,"py":406.4990786919584,"pz":-1222.5003920282277,"qw":0.46212194815187657,"qx":-0.164856824708531,"qy":0.8206997482964161,"qz":0.292775435324643,"sx":1,"sy":1,"sz":1}},
-        {"sel":"#nav_btns button[data-loc-id=&#39;4&#39;]","transform":{"px":784.4190657548925,"py":700.7900152942406,"pz":-1253.6195610428158,"qw":0.4559311895718988,"qx":-0.049511369778837015,"qy":0.8834430086861709,"qz":0.09593656780239114,"sx":1,"sy":1,"sz":1}}
+        {"sel":"#nav_btns button[data-loc-id=&#39;1&#39;]","transform":{"px":-978.1103068876712,"py":485.1911974779785,"pz":350.98855206445074,"qw":0.9159199669846987,"qx":-0.1714751826479817,"qy":-0.35668971868197646,"qz":-0.06677814313952053,"sx":1,"sy":1,"sz":1},"room_name":"room_dinning"},
+        {"sel":"#nav_btns button[data-loc-id=&#39;2&#39;]","transform":{"px":102.0680595056408,"py":1242.6908143567289,"pz":-1061.5444780551738,"qw":0.28404367824463317,"qx":-0.15783484220770397,"qy":0.8266772124134091,"qz":0.4593605750507152,"sx":1,"sy":1,"sz":1},"room_name":"room_hall"},
+        {"sel":"#nav_btns button[data-loc-id=&#39;3&#39;]","transform":{"px":549.6435095242391,"py":876.1198458276615,"pz":-1265.9618654192614,"qw":0.3759311236953401,"qx":-0.10982644543801502,"qy":0.8831979411388127,"qz":0.2580219736529662,"sx":1,"sy":1,"sz":1},"room_name":"room_kitchen"},
+        {"sel":"#nav_btns button[data-loc-id=&#39;4&#39;]","transform":{"px":474.84062162973146,"py":-256.3834885342531,"pz":-1602.758114295098,"qw":0.33896370540257426,"qx":0.02119263674358922,"qy":0.9387277804416414,"qz":-0.058690994153453684,"sx":1,"sy":1,"sz":1},"room_name":"room_game"},
+        {"sel":"#nav_btns button[data-loc-id=&#39;5&#39;]","transform":{"px":101.66756030345846,"py":796.3331817749057,"pz":502.8718389121419,"qw":0.9464821493196116,"qx":-0.2974579738163804,"qy":0.11949840157679664,"qz":0.037555650080545636,"sx":1,"sy":1,"sz":1}}
         ]'
         data-materials='[
         {"name":"roof_tile","color":"#a87f76"},
@@ -45,6 +46,7 @@
         <button data-loc-id='2' >2</button>
         <button data-loc-id='3' >3</button>
         <button data-loc-id='4' >4</button>
+        <button data-loc-id='5' >5</button>
     </div>
     <script src="../building_explorer.js"></script>
 </body>
