Rotate Building instead of moving camera to different locations

--- a/public/index.html
+++ b/public/index.html
@@ -22,17 +22,18 @@
 <body>
     <div 
         id='building_explorer'
-        data-flymode=0
-        data-inital-camera='{"px":101.66756030345846,"py":796.3331817749057,"pz":502.8718389121419,"qw":0.9464821493196116,"qx":-0.2974579738163804,"qy":0.11949840157679664,"qz":0.037555650080545636,"sx":1,"sy":1,"sz":1}'
-        data-camera-locations='[
-        {"room_name":"room_billiards","sel":"button[data-room=&#39;6&#39;]","transform":{"px":706.6404555935457,"py":177.4803018879402,"pz":-1236.7523714201343,"qw":0.4500019400961591,"qx":0.010468169729832695,"qy":0.8927247071316389,"qz":-0.020767007702838444,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_dining","sel":"button[data-room=&#39;3&#39;]","transform":{"px":-871.7006320477486,"py":523.0710624398972,"pz":258.90237337951527,"qw":0.9009624711511796,"qx":-0.20830495312145558,"qy":-0.3708427577038413,"qz":-0.08573984570104012,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_french_parlor","sel":"button[data-room=&#39;7&#39;]","transform":{"px":523.2427483453787,"py":406.47412098835065,"pz":328.72019050257137,"qw":0.9203352525168934,"qx":-0.15794428522049556,"qy":0.3526663686998288,"qz":0.0605232032275975,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_enclosed_porch","sel":"button[data-room=&#39;5&#39;]","transform":{"px":-153.54493244498403,"py":543.4205766661611,"pz":603.5062171831632,"qw":0.9691802526817849,"qx":-0.24610914953362162,"qy":-0.010614126160127857,"qz":-0.0026953020917248475,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_marbel_hall","sel":"button[data-room=&#39;4&#39;]","transform":{"px":-409.7859396464472,"py":840.1504951104247,"pz":415.82255794370286,"qw":0.9149165684222422,"qx":-0.3703692547387827,"qy":-0.14875515150669666,"qz":-0.060217878332992886,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_kitchen","sel":"button[data-room=&#39;8&#39;]","transform":{"px":375.34427698663194,"py":1012.4648141439301,"pz":-1153.6147480694149,"qw":0.3482902389633894,"qx":-0.14099208680865236,"qy":0.8590077599859832,"qz":0.34773669519340333,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_main_stair","sel":"button[data-room=&#39;9&#39;]","transform":{"px":657.7368119799539,"py":984.1867561858527,"pz":-734.6183769400435,"qw":0.5593128407732121,"qx":-0.2171526305255649,"qy":0.745772919980524,"qz":0.28954556295296613,"sx":1,"sy":1,"sz":1}},
-        {"room_name":"room_charles_bedroom","sel":"button[data-room=&#39;10&#39;]","transform":{"px":763.2851785567148,"py":465.8067179869089,"pz":-1192.4134392215276,"qw":0.45907941618235315,"qx":-0.06867495251547585,"qy":0.8759896757991519,"qz":0.13104170491856246,"sx":1,"sy":1,"sz":1}}
+        data-orbit-mode=0
+        data-debug-mode=1
+        data-inital-camera='{"px":-614.5832255177926,"py":451.094891796695,"pz":1048.4556609472756,"qw":0.9643926028691101,"qx":-0.15036494183648683,"qy":-0.21497402701230514,"qz":-0.03351804749631388,"sx":1,"sy":1,"sz":1}'
+        data-room-infos='[
+        {"room_name":"room_billiards","sel":"button[data-room=&#39;6&#39;]","rot":-2.64},
+        {"room_name":"room_dining","sel":"button[data-room=&#39;3&#39;]","rot":0.2},
+        {"room_name":"room_french_parlor","sel":"button[data-room=&#39;7&#39;]","rot":-0.95},
+        {"room_name":"room_enclosed_porch","sel":"button[data-room=&#39;5&#39;]","rot":-0.49},
+        {"room_name":"room_marbel_hall","sel":"button[data-room=&#39;4&#39;]","rot":-0.49},
+        {"room_name":"room_kitchen","sel":"button[data-room=&#39;8&#39;]","rot":-3.7},
+        {"room_name":"room_main_stair","sel":"button[data-room=&#39;9&#39;]","rot":-2.7},
+        {"room_name":"room_charles_bedroom","sel":"button[data-room=&#39;10&#39;]","rot":-2.7}
         ]'
         data-materials='[
         {"name":"roof_tile","color":"#a87f76"},
