Tween out rotate then tween back in

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
         data-debug-mode=1
         data-inital-camera='{"px":-614.5832255177926,"py":451.094891796695,"pz":1048.4556609472756,"qw":0.9643926028691101,"qx":-0.15036494183648683,"qy":-0.21497402701230514,"qz":-0.03351804749631388,"sx":1,"sy":1,"sz":1}'
         data-room-infos='[
-        {"room_name":"room_billiards","sel":"button[data-room=&#39;6&#39;]","rot":-2.64},
-        {"room_name":"room_dining","sel":"button[data-room=&#39;3&#39;]","rot":0.2},
-        {"room_name":"room_french_parlor","sel":"button[data-room=&#39;7&#39;]","rot":-0.95},
-        {"room_name":"room_enclosed_porch","sel":"button[data-room=&#39;5&#39;]","rot":-0.49},
-        {"room_name":"room_marbel_hall","sel":"button[data-room=&#39;4&#39;]","rot":-0.49},
-        {"room_name":"room_kitchen","sel":"button[data-room=&#39;8&#39;]","rot":-3.7},
-        {"room_name":"room_main_stair","sel":"button[data-room=&#39;9&#39;]","rot":-2.7},
-        {"room_name":"room_charles_bedroom","sel":"button[data-room=&#39;10&#39;]","rot":-2.7}
+        {"room_name":"room_billiards","sel":"button[data-room=&#39;6&#39;]","rot":-2.64,"axisVal":100},
+        {"room_name":"room_dining","sel":"button[data-room=&#39;3&#39;]","rot":0.2,"axisVal":200},
+        {"room_name":"room_french_parlor","sel":"button[data-room=&#39;7&#39;]","rot":-0.95,"axisVal":400},
+        {"room_name":"room_enclosed_porch","sel":"button[data-room=&#39;5&#39;]","rot":-0.49,"axisVal":500},
+        {"room_name":"room_marbel_hall","sel":"button[data-room=&#39;4&#39;]","rot":-0.49,"axisVal":700},
+        {"room_name":"room_kitchen","sel":"button[data-room=&#39;8&#39;]","rot":-3.7,"axisVal":900},
+        {"room_name":"room_main_stair","sel":"button[data-room=&#39;9&#39;]","rot":-2.7,"axisVal":50},
+        {"room_name":"room_charles_bedroom","sel":"button[data-room=&#39;10&#39;]","rot":-2.7,"axisVal":10}
         ]'
         data-materials='[
         {"name":"roof_tile","color":"#a87f76"},
